--- a/view/chat/main.html
+++ b/view/chat/main.html
@@ -8,19 +8,18 @@
 
     <ul class="chat-thread">
          <!--群聊且item.dstid=当前msgcontext.dstid
-        <span v-text="JSON.stringify(msglist)"></span>
+
           -->
          <!--单聊且是他发的item.userid=msgcontext.dstid && 发给我的 item.dstid=myid 或者是我item.userid= myid发的,&&发给他的item.dstid= msgcontext.dstid 我发给他的  -->
 		
 		<!--dstid>TargetId  11=2  10=1 -->
 		<!-- v-if="(item.ismine? item.msg.TargetId==msgcontext.TargetId : item.msg.userId==msgcontext.TargetId )" -->
-        <li class="chat " :class="item.ismine?'mine':'other'" 
-		v-for="item in msglist" 
-		v-if="item.msg.cmd==msgcontext.cmd 
-		&& (( item.msg.cmd==10 &&  (item.ismine? item.msg.dstid==msgcontext.dstid : item.msg.dstid==msgcontext.userid )) 
-		|| ( item.msg.cmd==11 &&  (item.msg.dstid==msgcontext.dstid))) ">
-            
-            <div >
+        <li class="chat " :class="item.ismine?'mine':'other'" v-for="item in msglist" >
+<!--		v-if="item.msg.cmd==msgcontext.cmd -->
+<!--		&& (( item.msg.cmd==10 &&  (item.ismine? item.msg.dstid==msgcontext.dstid : item.msg.dstid==msgcontext.userid )) -->
+<!--		|| ( item.msg.cmd==11 &&  (item.msg.dstid==msgcontext.dstid))) ">-->
+<!--            -->
+        <div >
             <img class="avatar" :src="item.user.avatar ||'/asset/images/avatar0.png'" />
         </div>
 
