添加好友功能

--- a/view/chat/foot.html
+++ b/view/chat/foot.html
@@ -3,8 +3,8 @@
 
     function upload(dom){
         uploadfile("attach/upload",dom,function(res){
-            if(res.code==0){
-                app.sendpicmsg(res.data)
+            if(res.Code==0){
+                app.sendpicmsg(res.Data)
             }
 
         })
@@ -151,7 +151,7 @@
                                         console.log("ondataavailable");
                                         uploadblob("attach/upload",event.data,".mp3",res=>{
                                             var duration = Math.ceil((new Date().getTime()-this.duration)/1000);
-                                            this.sendaudiomsg(res.data,duration);
+                                            this.sendaudiomsg(res.Data,duration);
                                         })
                                         stream.getTracks().forEach(function (track) {
                                             track.stop();
@@ -364,11 +364,11 @@
                     _addfriend:function(dstobj){
                         var that = this
                         post("contact/addfriend",{dstid:dstobj,userid: userId()},function(res){
-                            if(res.code==0){
+                            if(res.Code==0){
                                 mui.toast("添加成功");
                                 that.loadfriends();
                             }else{
-                                mui.toast(res.msg);
+                                mui.toast(res.Msg);
                             }
                         })
                     },
