提交社区功能

--- a/view/chat/createcom.html
+++ b/view/chat/createcom.html
@@ -1,4 +1,4 @@
-{{define "/chat/createcom.shtml"}}
+{{/*{{define "/chat/createcom.shtml"}}*/}}
 <!DOCTYPE html>
 <html>
 <head>
@@ -141,4 +141,4 @@
             }
     )
 </script>
-{{end}}
+{{/*{{end}}*/}}
