--- a/view/chat/profile.html
+++ b/view/chat/profile.html
@@ -32,7 +32,7 @@
             </a>
         </li>
         <li  class="mui-table-view-cell">
-            <a class="mui-navigate-right" href="createcom.shtml">
+            <a class="mui-navigate-right" href="/community">
                 创建社群
             </a>
         </li>
