--- a/view/user/login.html
+++ b/view/user/login.html
@@ -1,69 +1,66 @@
-{{define  "/user/login.shtml"}}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-{{template "/chat/head.shtml"}}
+    {{template "/chat/head.shtml"}}
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=yes">
+    <title>聊天室</title>
+    <link rel="stylesheet" href="/asset/plugins/mui/css/mui.css" />
+    <link rel="stylesheet" href="/asset/css/login.css" />
+    <script src="../../asset/plugins/mui/js/mui.js"></script>
+    <script src="../../asset/js/vue-resource-1.5.3.js"></script>
+    <script src="../../asset/js/vue.min.js"></script>
+    <script src="../../asset/js/util.js"></script>
 </head>
 <body>
-
 <header class="mui-bar mui-bar-nav">
-    <h1 class="mui-title">登录</h1>
+    <h1 class="mui-title">登录页面</h1>
 </header>
-<div class="mui-content" id="pageapp">
-    <form id='login-form' class="mui-input-group">
+<div class="mui-content" id="pageApp">
+    <form id="login-form" class="mui-input-group">
         <div class="mui-input-row">
             <label>账号</label>
-            <input v-model="user.mobile" placeholder="请输入手机号" type="text" class="mui-input-clear mui-input" >
+            <input v-model="user.name" placeholder="请输入用户名" type="text" class="mui-input-clear">
         </div>
         <div class="mui-input-row">
             <label>密码</label>
-            <input v-model="user.passwd" placeholder="请输入密码"  type="password" class="mui-input-clear mui-input" >
+            <input v-model="user.password" placeholder="请输入密码" type="password" class="mui-input-clear">
         </div>
     </form>
     <div class="mui-content-padded">
-        <button @click="login"  type="button"  class="mui-btn mui-btn-block mui-btn-primary">登录</button>
-        <div class="link-area"><a id='reg' href="register.shtml">注册账号</a> <span class="spliter">|</span> <a  id='forgetPassword'>忘记密码</a>
-        </div>
+        <button @click="login" type="button" class="mui-btn mui-btn-block mui-btn-primary">登录</button>
+        <div class="link-area"><a id="register" href="/register">注册账号</a><span class="splitter"> | </span><a id="forget" href="/index">忘记密码</a>
+        </div> 
     </div>
-    <div class="mui-content-padded oauth-area">
-    </div>
+    <div class="mui-content-padded oauth-area"></div>
 </div>
 </body>
 </html>
 <script>
-    var app = new Vue({
-        el:"#pageapp",
+    let app = new Vue({
+        el:"#pageApp",
         data:function(){
             return {
                 user:{
-                    mobile:"",
-                    passwd:""
+                    name:"",
+                    password:""
                 }
             }
         },
         methods:{
-            login:function(){
-                //检测手机号是否正确
-                console.log("login")
-                //检测密码是否为空
-
-                //网络请求
-                //封装了promis
-                util.post("user/login",this.user).then(res=>{
-                    console.log(res)
-                    if(res.code!=0){
-                        mui.toast(res.msg)
-                    }else{
-                        var url = "/chat/index.shtml?id="+res.data.id
-                                +"&token="+res.data.token
-                        userInfo(res.data)
-                        userId(res.data.id)
-                        location.href= url
-                        //mui.alert(url)
+            login:function (){
+                util.post("api/user/login",this.user).then(
+                    res => {
+                        if(res.code !== 0){
+                            mui.toast(res.message)
+                        }else{
+                            // 登录成功后保存用户信息
+                            userInfo(res.data)
+                            userId(res.data.ID)
+                            location.replace("/toChat?id=" + res.data.ID + "&token=" +res.data.Identity)
+                        }
                     }
-                })
-            },
-        }
-    })
+                )
+            }
+        }        
+    },)
 </script>
-{{end}}
