--- a/view/chat/index.html
+++ b/view/chat/index.html
@@ -17,7 +17,7 @@
     <!--个人中心-->
     {{template "/chat/profile.shtml"}}
     <!--聊天主界面-->
-    {{template "/chat/main.shtml"}}
+    {{template "/chat/chat.shtml"}}
 
 </div>
 </body>
