--- a/view/chat/chat.html
+++ b/view/chat/chat.html
@@ -1,4 +1,4 @@
-{{define "/chat/main.shtml"}}
+{{define "/chat/chat.shtml"}}
 <div v-show="win!='main'">
 <header class="mui-bar mui-bar-nav">
     <a class="mui-icon mui-icon-left-nav mui-pull-left" @tap="win='main'"></a>
