--- a/view/chat/profile.html
+++ b/view/chat/profile.html
@@ -26,7 +26,7 @@
                 添加好友
             </a>
         </li>
-        <li @click="joincomunity" class="mui-table-view-cell">
+        <li @click="joinCommunity" class="mui-table-view-cell">
             <a class="mui-navigate-right">
                 加入社群
             </a>
