群功能调试成功

--- a/view/chat/createcom.html
+++ b/view/chat/createcom.html
@@ -143,7 +143,7 @@
                         if (res.Code === 0) {
                             mui.toast("创建成功");
                         } else {
-                            mui.toast(res.msg);
+                            mui.toast(res.Msg);
                         }
                     })
                 },
