--- a/view/chat/chat.html
+++ b/view/chat/chat.html
@@ -14,9 +14,10 @@
 		
 		<!--dstid>TargetId  11=2  10=1 -->
 		<!-- v-if="(item.ismine? item.msg.TargetId==msgcontext.TargetId : item.msg.userId==msgcontext.TargetId )" -->
-        <li class="chat " :class="item.ismine?'mine':'other'" v-for="item in msglist" v-if="(item.ismine? item.msg.dstid==msgcontext.dstid : item.msg.userid==msgcontext.dstid )">
-        <li class="chat " :class="item.ismine?'mine':'other'" v-for="item in msglist">
-{{/*            <div v-text="item.msg"></div>*/}}
+{{/*        <li class="chat " :class="item.ismine?'mine':'other'" v-for="item in msglist" v-if="(item.ismine? item.msg.dstid==msgcontext.dstid : item.msg.userid==msgcontext.dstid )">*/}}
+        <li class="chat " :class="item.ismine?'mine':'other'" v-for="item in msglist" v-if="item.msg.cmd == msgcontext.cmd &&
+        ((item.msg.cmd == 1) && (item.ismine ? item.msg.dstid == msgcontext.dstid : item.msg.userid == msgcontext.dstid)
+        || (item.msg.cmd == 11) && (item.msg.dstid == msgcontext.dstid))">
 <!--		v-if="item.msg.cmd==msgcontext.cmd -->
 <!--		&& (( item.msg.cmd==10 &&  (item.ismine? item.msg.dstid==msgcontext.dstid : item.msg.dstid==msgcontext.userid )) -->
 <!--		|| ( item.msg.cmd==11 &&  (item.msg.dstid==msgcontext.dstid))) ">-->
